--- a/00_Pytorch_Fundamentals.ipynb
+++ b/00_Pytorch_Fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMedCVtKHCJ4i57GDxH/4Wf",
+      "authorship_tag": "ABX9TyPz7V06HeJXD8GNB/hVk0QH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1523,9 +1523,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "X"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "94kj58VHzxXC",
+        "outputId": "734ff1dc-ec8a-46cf-8eda-6ace339515a8"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([  4,   5,   7,   6,   4,   2,   6,   8,   9,   5,   4, 444,   4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "94kj58VHzxXC"
+        "id": "30T_6GJn0gho"
       },
       "execution_count": null,
       "outputs": []
